--- a/index.html
+++ b/index.html
@@ -19,30 +19,27 @@
     <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
         <div class="container">
             <a class="logo" href="#">Aanand</a>
-            <ul class="nav">
+            <ul class="nav d-lg-flex">
                 <li class="item">
-                    <a class="link" href="#home">Home</a>
+                    <a class="link second-font fw-bold" href="#home">Home</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#about">About</a>
+                    <a class="link second-font fw-bold" href="#about">About</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#portfolio">Portfolio</a>
+                    <a class="link second-font fw-bold" href="#testmonial">Services</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#testmonial">Testmonial</a>
+                    <a class="link second-font fw-bold" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#blog">Blog</a>
-                </li>
-                <li class="item">
-                    <a class="link" href="#contact">Contact</a>
+                    <a class="link second-font fw-bold" href="#contact">Contact</a>
                 </li>
                 <li class="item ml-md-3">
-                    <a href="components.html" class="btn btn-primary">Components</a>
+                    <a href="#" class="btn btn-primary second-font fw-bold">Hire Me</a>
                 </li>
             </ul>
-            <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
+            <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic d-flex d-lg-none">
                 <div class="hamburger-box">
                     <div class="hamburger-inner"></div>
                 </div>
@@ -59,10 +56,51 @@
             </h1>
             <p class="header-subtitle">FRONTEND WEB DESIGNER</p>
 
-            <button class="btn btn-primary">Visit My Works</button>
+            <button class="btn btn-primary" href="#about">Visit My Works</button>
         </div>
-    </header><!-- end of page header -->
+    </header>
+    <!-- end of page header -->
+    <!-- about section -->
+    <section class="section pt-0" id="about">
+        <!-- container -->
+        <div class="container text-center">
+            <!-- about wrapper -->
+            <div class="about">
+                <div class="about-img-holder">
+                    <img src="assets/images/man.png" class="about-img" alt="">
+                </div>
+                <div class="about-caption">
+                    <p class="section-subtitle">Who Am I ?</p>
+                    <h2 class="section-title mb-3">About Me</h2>
+                    <p>
+                        Hello there, my name is Aanand Sanodiya and I am a passionate web developer with a year of
+                        experience. My area of
+                        expertise is in Laravel, PHP, and API development, where I create efficient and user-friendly
+                        solutions for my clients.
+                        My journey into web development began with a strong curiosity and a desire to create impactful
+                        digital experiences. I
+                        have experience in HTML, CSS, JavaScript, PHP, SQL, and Laravel. I am a front-end developer and
+                        I am currently learning
+                        React.js. I love diving deep into coding challenges, constantly learning, and staying updated
+                        with the latest trends. My
+                        goal is to utilize my skills to build innovative web solutions that solve real-world problems.
+                        When I am not coding, you
+                        can find me exploring new technologies, enjoying nature, or diving into a good book.
+                    </p>
+                    <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
+                </div>
+            </div>
+            <!-- end of about wrapper -->
+        </div>
+        <!-- end of container -->
+    </section>
+    <!-- end of about section -->
+
+    <script src="https://code.jquery.com/jquery-3.6.2.min.js"
+        integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/aanand.js"></script>
+    <script src="assets/js/bootstrap.affix.js"></script>
 </body>
 
 </html>
