--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+
+    <script src="https://code.jquery.com/jquery-3.6.2.min.js"
+        integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
+    <script src="assets/js/aanand.js"></script>
     <title>Aanand Sanodiya</title>
 </head>
 
@@ -27,16 +31,19 @@
                     <a class="link second-font fw-bold" href="#about">About</a>
                 </li>
                 <li class="item">
-                    <a class="link second-font fw-bold" href="#testmonial">Services</a>
+                    <a class="link second-font fw-bold" href="#skills">Skills</a>
                 </li>
                 <li class="item">
                     <a class="link second-font fw-bold" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="item">
+                    <a class="link second-font fw-bold" href="#services">Services</a>
+                </li>
+                <li class="item">
                     <a class="link second-font fw-bold" href="#contact">Contact</a>
                 </li>
                 <li class="item ml-md-3">
-                    <a href="#" class="btn btn-primary second-font fw-bold">Hire Me</a>
+                    <a href="#" class="btn btn-primary second-font btn-rounded fw-bold">Hire Me</a>
                 </li>
             </ul>
             <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic d-flex d-lg-none">
@@ -95,11 +102,79 @@
         <!-- end of container -->
     </section>
     <!-- end of about section -->
+    <!-- skills section -->
+    <section class="section" id="skills">
+        <div class="container text-center">
+            <!-- <p class="section-subtitle">What I Do ?</p> -->
+            <h6 class="section-title mb-6">My Skills</h6>
+            <!-- row -->
+            <div class="row">
+                <div class="col-lg-6">
+                    <small>Html</small>
+                    <div class="progress mt-2 mb-3">
+                        <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>90%</span></div>
+                    </div>
+                    <small>CSS</small>
+                    <div class="progress mt-2 mb-3">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 85%" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>85%</span></div>
+                    </div>
+                    <small>JavaScript</small>
+                    <div class="progress mt-2 mb-3">
+                        <div class="progress-bar" role="progressbar"
+                            style="width: 70%; background-color: rgb(214, 214, 0);" aria-valuenow="25" aria-valuemin="0"
+                            aria-valuemax="100"><span>70%</span>
+                        </div>
+                    </div>
+                    <small>React</small>
+                    <div class="progress mt-2 mb-3">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 60%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>60%</span>
+                        </div>
+                    </div>
+                    <small>PHP</small>
+                    <div class="progress mt-2 mb-3">
+                        <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>75%</span>
+                        </div>
+                    </div>
+                    <small>Laravel</small>
+                    <div class="progress mt-2 mb-3">
+                        <div class="progress-bar bg-danger" role="progressbar" style="width: 65%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>65%</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <span class="Sphere" id="Sphere"></span>
+                </div>
+            </div><!-- end of row -->
+        </div>
+    </section>
+    <!-- end of skills section -->
 
-    <script src="https://code.jquery.com/jquery-3.6.2.min.js"
-        integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/TagCloud@2.2.0/dist/TagCloud.min.js"></script>
+    <script>
+        const Texts = [
+            'HTML', 'CSS', 'JAVASCRIPT',
+            'REACT', 'BOOTSTRAP', 'TAILWIND CSS',
+            'LARAVEL', 'PHP', 'MYSQL', 'JQUERY',
+            'SASS', 'WORDPRESS'
+        ];
+
+        var tagCloud = TagCloud('#Sphere', Texts, {
+            radius: 230,
+            maxSpeed: 'normal',
+            initSpeed: 'fast',
+            direction: 135,
+            keep: true
+        });
+
+        var color = '#6c757d';
+        document.querySelector('#Sphere').style.color = color;
+    </script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/aanand.js"></script>
     <script src="assets/js/bootstrap.affix.js"></script>
 </body>
 
