--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="about-caption">
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
-                    <p>
+                    <p style="text-align: justify;">
                         Hello there, my name is Aanand Sanodiya and I am a passionate web developer with a year of
                         experience. My area of
                         expertise is in Laravel, PHP, and API development, where I create efficient and user-friendly
@@ -106,7 +106,7 @@
     <section class="section" id="skills">
         <div class="container text-center">
             <!-- <p class="section-subtitle">What I Do ?</p> -->
-            <h6 class="section-title mb-6">My Skills</h6>
+            <h6 class="section-title mb-6 fw-bold">My Skills</h6>
             <!-- row -->
             <div class="row">
                 <div class="col-lg-6">
@@ -143,6 +143,12 @@
                     <div class="progress mt-2 mb-3">
                         <div class="progress-bar bg-danger" role="progressbar" style="width: 65%;" aria-valuenow="25"
                             aria-valuemin="0" aria-valuemax="100"><span>65%</span>
+                        </div>
+                    </div>
+                    <small>Bootstrap</small>
+                    <div class="progress mt-2 mb-3">
+                        <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="100"><span>85%</span>
                         </div>
                     </div>
                 </div>
